modularized (JPMS) / java 17. sldg not modularized cuz it loads JDBC drivers dynamically